# quers-canister

./: .gitignore  Cargo.toml  README.md  canister_ids.json  dfx.json  user.did.js
src/ic_portal_canisters/: Cargo.toml  ic_portal_canisters.did  ic_portal_canisters.old.did
src/ic_portal_canisters/src/: friend.rs  main.rs  profile.rs
src/ic_portal_canisters/src/custom_logic/: custom_info.rs  custom_ops.rs  mod.rs
src/ic_portal_canisters/src/model/: profile.rs
src/user/: Cargo.toml
src/user/api/: Cargo.toml  user.did
src/user/api/src/: lib.rs  main.rs
src/user/api/src/queries/: check_profile_follow_status.rs  get_all_answers_list_by_question_id.rs  get_all_comment_list.rs  get_all_question_id_list.rs  get_all_question_list.rs  get_profile_answer_question_list.rs  get_profile_followers_count.rs  get_profile_followers_set.rs  get_profile_followings_count.rs  get_profile_followings_set.rs  get_profile_question_list.rs  get_profile_watch_list.rs  get_question_by_id.rs  get_question_down_thumb_by_id.rs  get_question_up_thumb_by_id.rs  get_question_votes_by_id.rs  get_user_followers.rs  get_user_following.rs  get_user_profile.rs  init_state.rs  mod.rs  view_by_page.rs
src/user/api/src/updates/: add_new_answer.rs  add_new_comment.rs  add_new_question.rs  add_profile_watch_list.rs  down_vote.rs  follow_operation.rs  mod.rs  set_user_principal.rs  set_user_profile.rs  un_follow_operation.rs  up_vote.rs  update_name.rs  update_profile_description.rs  update_user_followers.rs  update_user_following.rs  update_user_holders.rs  update_user_holding.rs  update_user_tickets.rs  update_user_tvl.rs  update_username.rs
src/user/impl/: Cargo.toml
src/user/impl/src/: guards.rs  lib.rs  memory.rs
src/user/impl/src/lifecycle/: init.rs  mod.rs  post_upgrade.rs  pre_upgrade.rs
src/user/impl/src/model/: profile.rs
src/user/impl/src/queries/: check_profile_follow_status.rs  get_all_answers_list_by_question_id.rs  get_all_comment_list.rs  get_all_question_id_list.rs  get_all_question_list.rs  get_profile_answer_question_list.rs  get_profile_followers_count.rs  get_profile_followers_set.rs  get_profile_followings_count.rs  get_profile_followings_set.rs  get_profile_question_list.rs  get_profile_watch_list.rs  get_question_by_id.rs  get_question_down_thumb_by_id.rs  get_question_up_thumb_by_id.rs  get_question_votes_by_id.rs  get_user_followers.rs  get_user_following.rs  get_user_profile.rs  init_state.rs  mod.rs  view_by_page.rs
src/user/impl/src/updates/: add_new_answer.rs  add_new_comment.rs  add_new_question.rs  add_profile_watch_list.rs  down_vote.rs  follow_operation.rs  mod.rs  set_user_principal.rs  set_user_profile.rs  un_follow_operation.rs  up_vote.rs  update_name.rs  update_profile_description.rs  update_user_followers.rs  update_user_following.rs  update_user_holders.rs  update_user_holding.rs  update_user_tvl.rs  (+2 more)
src/user/src/: lib.rs
src/user/src/asset_manage/: asset_info.rs  asset_ops.rs  mod.rs
src/user/src/model/: profile.rs
src/utils/: Cargo.toml
src/utils/src/: canister.rs  crypto_currency.rs  custom.rs  env.rs  lib.rs  rank.rs  register.rs  serializer.rs  stable_memory.rs  time.rs  token_identifier.rs  types.rs
src/utils/src/env/: canister.rs
(+13 files in other folders)
