[workspace]
members = [
    "src/user/api",
    "src/user/impl",
    "src/canister_library",
    "src/candid_gen",
    "src/utils"
]

[workspace.dependencies]
rand = "0.8.5"
ic-cdk = "0.10.0"
serde = "1.0.186"
serde_bytes = "0.11.12"
serde_cbor = "0.11.2"
serde_json = "1.0.105"
proc-macro2 = "1.0.66"
syn = "2.0.29"
quote = "1.0.33"
candid = "0.9.3"
ic-cdk-macros = "0.7.0"
ic-cdk-timers = "0.4.0"
ic-ledger-types = "0.7.0"
ic-cdk-optimizer = "0.3.4"
num-traits = "0.2.14"
getrandom = "0.2.10"
anyhow = "1.0.0"
sha2 = "0.10.7"
rmp-serde = "1.1.2"
tracing = "0.1.37"
ic-stable-structures = "0.6.0"
ic-stable-memory = "0.4"
