[package]
name = "ic_portal_canisters"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
candid = "0.9.3"
ic-cdk = "0.10.0"
ic-cdk-macros = "0.7.0"
ic-cdk-timers = "0.4.0"
ic-ledger-types = "0.7.0"
serde = "1.0.186"
serde_bytes = "0.11.12"
serde_cbor = "0.11.2"
serde_json = "1.0.105"
ic-cdk-optimizer = "0.3.4"
num-traits = "0.2.14"
anyhow = "1.0"