[package]
name = "utils"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = { workspace = true }
ic-cdk = { workspace = true }
candid = {workspace = true }
getrandom = { workspace = true, features = ["custom"] }
ic-ledger-types = { workspace = true }
sha256 = { path = "../sha256" }
serde = { workspace = true }
serde_bytes = { workspace = true }
serde_json = { workspace = true }
rmp-serde = { workspace = true }
ic-stable-structures = { workspace = true }
ic-stable-memory = { workspace = true }
anyhow = { workspace = true }
